@@ -1,3 +1,8 @@
+2007-08-01  Sven Schuetz
+
+        * backend_sfcb.c:
+        Fixed 1763178 GetClass operation failure
+
 2007-06-22  Tyrel Datwyler <tyreld@us.ibm.com>
 
 	* mofs.l:
